<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textEnDecryptFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".TextEnDecrypt">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fileEnDecryptHeaderText"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/file_en_decrypt_headline"
            android:textColor="#000000"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fileEnDecryptKeyLayout"
            android:layout_width="308dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptHeaderText"
            app:layout_constraintVertical_bias="0.0"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fileEnDecryptKeyEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/key_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fileEnDecryptChooseFiles"
            android:layout_width="209dp"
            android:layout_height="43dp"
            android:background="@drawable/choose_files_style"
            android:gravity="center"
            android:onClick="fileEnDecryptChooseFiles"
            android:text="@string/choose_files_text"
            app:layout_constraintBottom_toTopOf="@+id/fileEnDecryptFileBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptKeyLayout" />

        <ListView
            android:id="@+id/fileEnDecryptFileBox"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/file_box_style"
            app:layout_constraintBottom_toTopOf="@+id/fileEnDecryptAdvancedText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptKeyLayout"
            app:layout_constraintVertical_bias="0.35" />

        <Button
            android:id="@+id/fileEnDecryptCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:background="@drawable/cancel_button_style"
            android:onClick="cancelEnDecryptFileButton"
            android:text="@string/cancel_text"
            app:layout_constraintBottom_toTopOf="@+id/fileEnDecryptAdvancedText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptProgressBar" />

        <Button
            android:id="@+id/fileEnDecryptEncryptButton"
            android:layout_width="125dp"
            android:layout_height="43dp"
            android:background="@drawable/round_button_style"
            android:onClick="encryptFileButton"
            android:text="@string/text_en_decrypt_encrypt_button_text"
            app:layout_constraintBottom_toTopOf="@+id/fileEnDecryptAdvancedText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptFileBox"
            app:layout_constraintVertical_bias="0.288" />

        <ProgressBar
            android:id="@+id/fileEnDecryptProgressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fileEnDecryptAdvancedText"
            app:layout_constraintEnd_toStartOf="@+id/fileEnDecryptDecryptButton"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toEndOf="@+id/fileEnDecryptEncryptButton"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptFileBox"
            app:layout_constraintVertical_bias="0.29000002" />

        <Button
            android:id="@+id/fileEnDecryptDecryptButton"
            android:layout_width="125dp"
            android:layout_height="43dp"
            android:background="@drawable/round_button_style"
            android:onClick="decryptFileButton"
            android:text="@string/text_en_decrypt_decrypt_button_text"
            app:layout_constraintBottom_toTopOf="@+id/fileEnDecryptAdvancedText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptFileBox"
            app:layout_constraintVertical_bias="0.288" />

        <View
            android:id="@+id/fileEnDecryptSeparator1"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptKeyLayout"
            app:layout_constraintVertical_bias="0.79" />

        <TextView
            android:id="@+id/fileEnDecryptAdvancedText"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/advanced_text"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fileEnDecryptSeparator2"
            app:layout_constraintStart_toEndOf="@+id/fileEnDecryptSeparator1"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptKeyLayout"
            app:layout_constraintVertical_bias="0.79" />

        <View
            android:id="@+id/fileEnDecryptSeparator2"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptKeyLayout"
            app:layout_constraintVertical_bias="0.79" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fileEnDecryptSaltLayout"
            android:layout_width="140dp"
            android:layout_height="69dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptAdvancedText"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fileEnDecryptSaltEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/salt_hint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fileEnDecryptAlgorithmText"
            android:layout_width="109dp"
            android:layout_height="29dp"
            android:gravity="center"
            android:text="@string/algorithm_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptAdvancedText"
            app:layout_constraintVertical_bias="0.135" />

        <Spinner
            android:id="@+id/fileEnDecryptAlgorithm"
            android:layout_width="160dp"
            android:layout_height="34dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_style"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileEnDecryptAlgorithmText"
            app:layout_constraintVertical_bias="0.0">

        </Spinner>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>