<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textEnDecryptFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".TextEnDecrypt">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fileDeleteHeaderText"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/secure_delete_files_headline"
            android:textColor="#000000"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fileDeleteKeyLayout"
            android:layout_width="308dp"
            android:layout_height="65dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteHeaderText"
            app:layout_constraintVertical_bias="0.0"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/key_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fileDeleteChooseFiles"
            android:layout_width="209dp"
            android:layout_height="43dp"
            android:background="@drawable/choose_files_style"
            android:gravity="center"
            android:onClick="fileDeleteChooseFiles"
            android:text="@string/choose_files_text"
            app:layout_constraintBottom_toTopOf="@+id/fileDeleteFileBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteHeaderText" />

        <ListView
            android:id="@+id/fileDeleteFileBox"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/file_box_style"
            app:layout_constraintBottom_toTopOf="@+id/fileDeleteAdvancedText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteKeyLayout"
            app:layout_constraintVertical_bias="0.133" />

        <Button
            android:id="@+id/fileDeleteDeleteButton"
            android:layout_width="125dp"
            android:layout_height="43dp"
            android:background="@drawable/round_button_style"
            android:onClick="deleteFileButton"
            android:text="@string/delete_text"
            app:layout_constraintBottom_toTopOf="@+id/fileDeleteAdvancedText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteFileBox"
            app:layout_constraintVertical_bias="0.56" />

        <ProgressBar
            android:id="@+id/fileDeleteProgressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fileDeleteAdvancedText"
            app:layout_constraintEnd_toStartOf="@+id/fileDeleteCancelButton"
            app:layout_constraintStart_toEndOf="@+id/fileDeleteDeleteButton"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteFileBox"
            app:layout_constraintVertical_bias="0.575" />

        <Button
            android:id="@+id/fileDeleteCancelButton"
            android:layout_width="125dp"
            android:layout_height="43dp"
            android:background="@drawable/cancel_button_style"
            android:onClick="cancelDeleteFileButton"
            android:text="@string/cancel_text"
            app:layout_constraintBottom_toTopOf="@+id/fileDeleteAdvancedText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteFileBox"
            app:layout_constraintVertical_bias="0.56" />

        <View
            android:id="@+id/fileDeleteSeparator1"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fileDeleteSeparator2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteKeyLayout"
            app:layout_constraintVertical_bias="0.79" />

        <TextView
            android:id="@+id/fileDeleteAdvancedText"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/advanced_text"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fileDeleteSeparator2"
            app:layout_constraintStart_toEndOf="@+id/fileDeleteSeparator1"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteKeyLayout"
            app:layout_constraintVertical_bias="0.79" />

        <View
            android:id="@+id/fileDeleteSeparator2"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteKeyLayout"
            app:layout_constraintVertical_bias="0.79" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fileDeleteIterationsLayout"
            android:layout_width="184dp"
            android:layout_height="69dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileDeleteAdvancedText"
            app:layout_constraintVertical_bias="0.517"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fileDeleteIterationsEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/iterations_hint"
                android:inputType="number"
                android:text="5" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>